fix(dashboardUI): minor fixes for : dashboardUI, create/join circle hover. loginUI, dark mode switch for middleLine

--- a/src/features/Dashboard/style.scss
+++ b/src/features/Dashboard/style.scss
@@ -120,7 +120,7 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(255, 255, 255, 0.2);
-  transition: display 1s ease;
+  transition: .5s ease;
 
   &--hide {
     display: none;
@@ -131,30 +131,33 @@
   }
 
   &:hover {
+    background-color: var(--backgroundButton);
+    color: var(--maincolor);
     .newcircle--addCircleIcon {
-      transform: scale(0);
+      display: none;
     }
     .newcircle--create {
-      background-color: var(--backgroundButton);
-      color: var(--maincolor);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 20px 20px 0 0;
       width: 100%;
       height: 50%;
-      display: inline;
       font-size: 2em;
       font-weight: bold;
     }
     .newcircle--line {
       width: 100%;
       height: 1px;
-      margin: 1em 0.5em;
-      border-color: var(--maincolor);
+      background: linear-gradient(180deg, transparent, #fff, transparent);
     }
     .newcircle--join {
-      background-color: var(--backgroundButton);
-      color: var(--maincolor);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 0 0 20px 20px;
       width: 100%;
       height: 50%;
-      display: inline;
       font-size: 2em;
       font-weight: bold;
     }
